tests/neg-macros/macros-in-same-project-4.check
-- Error: tests/neg-macros/macros-in-same-project-4/Bar.scala:5:13 -----------------------------------------------------
5 |  Foo.myMacro() // error
  |  ^^^^^^^^^^^^^
  |Failed to expand macro. This macro depends on an implementation that is defined in the same project and not yet compiled.
  |In particular method myMacro depends on method aMacroImplementation.
  |
  |Moving method aMacroImplementation to a different project would fix this.
  | This location is in code that was inlined at Bar.scala:5
